# jetbrains-manager-tool

./: .gitignore  CHANGELOG  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PKGBUILD  README.md  apps_data.json  build.sh  jetbrains-manager-tool.py  pyproject.toml
distro/debian/: control
jetbrains-manager-tool/: apps_data.json  jetbrains-manager-tool.py
jetbrains-manager-tool/docs/: help_docs  help_docs.md  help_pages.md
jetbrains-manager-tool/internal_docs/: docs.py  help_pages.md
