[tool.poetry]
name = "jetbrains-manager-tool"
version = "0.1.0"
description = "This tool allows for the streamlined installation, update and removal of various Jetbrains applications."
authors = ["Diogo Caveiro"]
maintainers = ["Diogo Caveiro"]
license = "GPLv3"
readme = "README.md"
homepage = "https://github.com/diogocaveiro/jetbrains-manager-tool"
repository = "https://github.com/diogocaveiro/jetbrains-manager-tool"
keywords = [
    "System Administration",
    "Programming",
    "Coding",
    "Installation",
]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
jetbrains-manager-tool = "jetbrains-manager-tool.jetbrains-manager-tool:updater"