[tool.poetry]
name = "jetbrains-manager-tool"
version = "0.4.5"
description = "This tool allows for the streamlined installation, update and removal of various Jetbrains applications."
authors = ["Diogo Caveiro"]
maintainers = ["Diogo Caveiro"]
license = "GNU General Public License v3.0"
readme = "README.md"
homepage = "https://github.com/diogocaveiro/jetbrains-manager-tool"
repository = "https://github.com/diogocaveiro/jetbrains-manager-tool"
keywords = [
    "System Administration",
    "Programming",
    "Coding",
    "Installation",
]
packages = [{include = "jetbrains-manager-tool"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.0"
idna = "^3.7"
urllib3 = "^2.2.2"
certifi = "^2024.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

